# azure-vm

./: Cargo.toml  readme.md
src/: macros.rs  main.rs  misc.rs  structs.rs
vms/: league-tiny10.toml  league-win7.toml  react.toml  tiny11.toml  win-hdd.toml  win-ssd.toml  win10.toml
